fixed overflow-y and -x for typewriter and body

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: "Science", Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 /* 
@@ -45,7 +46,7 @@ body {
       
         .typewriter h1{
           overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: hidden;
     /* border-right: .15em solid #008827; */
     white-space: nowrap;
     letter-spacing: normal;
